--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <!-- 广告容器 -->
         <div class="ad-container" id="adContainer">
             <a href="https://example.com" target="_blank">
-                <img src="https://github.com/user-attachments/assets/595f645a-e4da-49fd-bd67-db93566a6152?text=Ad+Banner" alt="广告图片">
+                <img src="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/dashang.png?text=Ad+Banner" alt="广告图片">
             </a>
         </div>
         <!-- 结果容器 -->
