--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </div>
     <!-- 页脚 -->
     <footer class="footer">
-        <p>Copyright © <span id="currentYear"></span> dqzboy.com. All Rights Reserved. <a href="https://github.com/dqzboy/Docker-Proxy" target="_blank" rel="noopener noreferrer">Docker-Proxy</a>版权所有</p>
+        <p>Copyright © <span id="currentYear"></span> dqzboy.github.io. All Rights Reserved. <a href="https://github.com/dqzboy/Docker-Proxy" target="_blank" rel="noopener noreferrer">Docker-Proxy</a>版权所有</p>
     </footer>
 
     <!-- 返回顶部按钮 -->
