--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <a href="https://www.dqzboy.com" target="_blank">博客</a>
                 <a href="https://www.dqzboy.com/zanzu" target="_blank">捐赠</a>
                 <a href="https://uk.dqzboy.xyz/" target="_blank">教程</a>
-                <a href="https://t.me/dqzboyblog" target="_blank">交流群</a>
+                <a href="https://www.dqzboy.com/17834.html" target="_blank">付费服务</a>
                 <a href="https://github.com/dqzboy/Docker-Proxy" target="_blank">GitHub</a>
             </nav>
         </div>
@@ -260,8 +260,8 @@
         </div>
         <!-- 广告容器 -->
         <div class="ad-container" id="adContainer">
-            <a href="https://example.com" target="_blank">
-                <img src="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/dashang.png?text=Ad+Banner" alt="广告图片">
+            <a href="https://www.dqzboy.com/17834.html" target="_blank">
+                <img src="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/docker-proxy-vip.png?text=Ad+Banner" alt="广告图片">
             </a>
         </div>
         <!-- 结果容器 -->
