--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <a href="https://www.dqzboy.com" target="_blank">博客</a>
                 <a href="https://www.dqzboy.com/zanzu" target="_blank">捐赠</a>
                 <a href="https://uk.dqzboy.xyz/" target="_blank">教程</a>
-                <a href="https://www.dqzboy.com/17834.html" target="_blank">付费服务</a>
+                <a href="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/%E5%90%88%E4%BD%9C%E8%81%94%E7%B3%BB.png" target="_blank">合作联系</a>
                 <a href="https://github.com/dqzboy/Docker-Proxy" target="_blank">GitHub</a>
             </nav>
         </div>
