--- a/index.html
+++ b/index.html
@@ -244,8 +244,7 @@
             <nav class="nav-menu">
                 <a href="javascript:void(0);" onclick="location.reload();">首页</a>
                 <a href="https://www.dqzboy.com" target="_blank">博客</a>
-                <a href="https://www.dqzboy.com/zanzu" target="_blank">捐赠</a>
-                <a href="https://uk.dqzboy.xyz/" target="_blank">教程</a>
+                <a href="https://www.dqzboy.com/zanzu" target="_blank">赞赏</a>
                 <a href="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/%E5%90%88%E4%BD%9C%E8%81%94%E7%B3%BB.png" target="_blank">合作联系</a>
                 <a href="https://github.com/dqzboy/Docker-Proxy" target="_blank">GitHub</a>
             </nav>
