--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
                 <a href="javascript:void(0);" onclick="location.reload();">首页</a>
                 <a href="https://www.dqzboy.com" target="_blank">博客</a>
                 <a href="https://www.dqzboy.com/zanzu" target="_blank">赞赏</a>
+                <a href="https://my.racknerd.com/aff.php?aff=12151" target="_blank">高性价比VPS</a>
                 <a href="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/%E5%90%88%E4%BD%9C%E8%81%94%E7%B3%BB.png" target="_blank">合作联系</a>
                 <a href="https://github.com/dqzboy/Docker-Proxy" target="_blank">GitHub</a>
             </nav>
