--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                 { text: '关于', link: 'https://github.com/dqzboy/Docker-Proxy' }
             ],
             adImages: [
-                { url: 'https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/reacknerd-ad.png', alt: '广告1', link: 'https://www.dqzboy.com/18036.html' },
+                { url: 'https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/reacknerd-ad.png', alt: '广告1', link: 'https://github.com/dqzboy/Docker-Proxy/blob/main/Ad/README.md' },
                 { url: 'https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/racknerd_vps.png', alt: '广告2', link: 'https://my.racknerd.com/aff.php?aff=12151' },
                 { url: 'https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/docker-proxy-vip.png', alt: '广告3', link: 'https://www.dqzboy.com/17834.html' }
             ]
