--- a/index.html
+++ b/index.html
@@ -465,7 +465,8 @@
             menuItems: [
                 { text: '首页', link: '#' },
                 { text: 'GitHub', link: 'https://github.com/dqzboy/Docker-Proxy', newTab: true },
-                { text: '关于', link: 'https://github.com/dqzboy/Docker-Proxy' }
+                { text: '赞助商', link: 'https://dqzboy.github.io/proxyui/zanzhu.html', newTab: true }，                
+                { text: '关于'， link: 'https://github.com/dqzboy/Docker-Proxy' }
             ],
             adImages: [
                 { url: 'https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/reacknerd-ad.png', alt: '广告1', link: 'https://github.com/dqzboy/Docker-Proxy/blob/main/Ad/README.md' },
