--- a/zanzhu.html
+++ b/zanzhu.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>广告提供商展示 - 您的广告解决方案</title>
+    <title>赞助平台</title>
+    <link rel="icon" href="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/docker-proxy.png" type="image/png">
     <style>
         :root {
             --primary-color: #3498db;
