--- a/zanzhu.html
+++ b/zanzhu.html
@@ -270,14 +270,14 @@
             <div class="provider-card">
                 <img src="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/zanzhu.png" alt="zanzhu Ads">
                 <div class="provider-info">
-                    <h2 class="provider-name">赞助平台</h2>
-                    <p class="provider-description">全球领先的平台，提供多样化的解决方案，助您触达目标受众。</p>
+                    <h2 class="provider-name">RackNerd/h2>
+                    <p class="provider-description">RackNerd 是一家多元化的全球基础设施即服务解决方案提供商。</p>
                     <div class="provider-tags">
-                        <span class="tag">标签</span>
-                        <span class="tag">标签</span>
-                        <span class="tag">标签</span>
+                        <span class="tag">性价比</span>
+                        <span class="tag">多元化</span>
+                        <span class="tag">多地区</span>
                     </div>
-                    <a href="https://github.com/dqzboy/Docker-Proxy" class="learn-more" target="_blank">了解更多</a>
+                    <a href="https://dqzboy.github.io/proxyui/racknerd" class="learn-more" target="_blank">了解更多</a>
                 </div>
             </div>
             <div class="provider-card">
