--- a/zanzhu.html
+++ b/zanzhu.html
@@ -268,7 +268,7 @@
 
         <div class="provider-grid">
             <div class="provider-card">
-                <img src="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/zanzhu.png" alt="zanzhu Ads">
+                <img src="https://github.com/user-attachments/assets/86794cb9-90b8-4b85-a7e4-fae6e3ae781a" alt="zanzhu Ads">
                 <div class="provider-info">
                     <h2 class="provider-name">RackNerd/h2>
                     <p class="provider-description">RackNerd 是一家多元化的全球基础设施即服务解决方案提供商。</p>
