--- a/zanzhu.html
+++ b/zanzhu.html
@@ -290,7 +290,7 @@
                         <span class="tag">标签</span>
                         <span class="tag">标签</span>
                     </div>
-                    <a href="https://github.com/dqzboy/Docker-Proxy" class="learn-more" target="_blank">了解更多</a>
+                    <a href="https://item.taobao.com/item.htm?ft=t&id=835173513744&spm=a21dvs.23580594.0.0.621e2c1bMDJPKz" class="learn-more" target="_blank">了解更多</a>
                 </div>
             </div>
             <div class="provider-card">
