--- a/zanzhu.html
+++ b/zanzhu.html
@@ -281,14 +281,14 @@
                 </div>
             </div>
             <div class="provider-card">
-                <img src="https://cdn.jsdelivr.net/gh/dqzboy/Blog-Image/BlogCourse/zanzhu.png" alt="zanzhu Ads">
+                <img src="https://github.com/user-attachments/assets/db531a60-3cd4-4d2c-82f9-af8586596e6c" alt="zanzhu Ads">
                 <div class="provider-info">
-                    <h2 class="provider-name">赞助平台</h2>
-                    <p class="provider-description">全球领先的平台，提供多样化的解决方案，助您触达目标受众。</p>
+                    <h2 class="provider-name">Docker镜像源</h2>
+                    <p class="provider-description">高速高性价比、超值体验！Docker镜像加速源，让你的镜像下载畅通无阻。</p>
                     <div class="provider-tags">
-                        <span class="tag">标签</span>
-                        <span class="tag">标签</span>
-                        <span class="tag">标签</span>
+                        <span class="tag">高速</span>
+                        <span class="tag">性价比</span>
+                        <span class="tag">Docker源</span>
                     </div>
                     <a href="https://item.taobao.com/item.htm?ft=t&id=835173513744&spm=a21dvs.23580594.0.0.621e2c1bMDJPKz" class="learn-more" target="_blank">了解更多</a>
                 </div>
