--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 
     <script>
         const proxyDomain = 'dqzboy/Docker-Proxy'; // 示例代理域名，请根据实际情况修改
-        const corsProxyUrl = 'https://cors-anywhere.herokuapp.com/'; // CORS 代理服务 URL
+        const corsProxyUrl = 'https://proxy.cors.sh/'; // CORS 代理服务 URL
 
         // 设置当前年份
         document.getElementById('currentYear').textContent = new Date().getFullYear();
